# verona

./: .llvm-ci.yml  .vsts-ci.yml
i18n/en/: mlir-verona.txt
i18n/it/: mlir-verona.txt
i18n/pt/: mlir-verona.txt
src/: CMakeLists.txt
src/i18n/: README.md  messagedb.cc  messagedb.h
src/interop/: CMakeLists.txt
src/interop/test/: CMakeLists.txt
src/interop/test/template_class/: CMakeLists.txt  main.cc  test.h
src/mlir/: 1ir-utils.h  generator.cc  generator.h
src/rt/: CMakeLists.txt
src/test/: CMakeLists.txt  systematic.h
testsuite/mlir/mlir-parse/block-args/: mlir.txt
utils/bot-scan/: find-green-intersection.pl  helpers.pm  scan-buildbot-ranges.pl  verona.json
